[package]
name = "myrouter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix= {version = "0.29.0", features=["socket","net","ioctl","fs"]}
libc="0.2"
bytes = "1"
thiserror="1.0.63"
anyhow="1.0.86"
env_logger="0.11"
log="0.4"
